apps/staging/audiobookshelf/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: staging-audiobookshelf-gateway
  namespace: audiobookshelf
spec:
  gatewayClassName: traefik
  listeners:
    - name: http
      port: 80
      protocol: HTTP
    - name: https
      port: 443
      protocol: HTTPS
      tls:
        certificateRefs:
          - group: ""
            kind: Secret
            name: local-selfsigned-tls
            namespace: traefik
        mode: Terminate
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: staging-audiobookshelf-route
  namespace: audiobookshelf
spec:
  hostnames:
    - books-stage.burntbytes.com
  parentRefs:
    - name: staging-audiobookshelf-gateway
  rules:
    - backendRefs:
        - name: audiobookshelf
          port: 3000
