apps/staging/audiobookshelf/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: audiobookshelf-http
  namespace: audiobookshelf-stage
spec:
  hostnames:
    - audiobooks.stage.burntbytes.com # Match requests
  parentRefs:
    - name: app-gateway-staging
      namespace: default
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: audiobookshelf-https
  namespace: audiobookshelf-stage
spec:
  hostnames:
    - audiobooks.stage.burntbytes.com # Match requests
  parentRefs:
    - name: app-gateway-staging
      namespace: default
      sectionName: https
  rules:
    - backendRefs:
        - name: audiobookshelf
          port: 3005
